
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int False ;
 int ORDWR ;
 int OTRUNC ;
 int OWRITE ;
 int True ;
 int close (int) ;
 int create (char*,int ,int) ;
 int envfd ;
 int envpath ;
 int err (char*,...) ;
 char* mktemp (char*) ;
 int msg (char*,char*) ;
 int open (char*,int) ;
 int snprint (char*,int,char*) ;
 int xstrdup (char*,int *) ;

__attribute__((used)) static int
envfile(void)
{
 char buffer[32];
 char * p;
 int fd;



 snprint(buffer, sizeof buffer, "#e/XXXXXXXXXXX");

 p = mktemp(buffer);
 if(!p[0] || (p[0] == '/' && !p[1]))
 {
  err("mktemp failed: %r");
  return False;
 }

 msg("creating \"%s\"", p);

 fd = create(p, ORDWR, 0600);
 if(fd < 0)
 {
  err("can't create \"%s\": %r", p);
  return False;
 }

 msg("truncating \"%s\"", p);
 close(fd);

 fd = open(p, OWRITE|OTRUNC);
 if(fd < 0)
 {
  err("can't open \"%s\": %r", p);
  return False;
 }

 msg("\"%s\" is ready for manipulation", p);

 xstrdup(buffer, &envpath);
 envfd = fd;

 return True;
}
